--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:watch": "parallelshell 'npm run watch:js -s' 'npm run watch:css -s'",
     "lint": "jshint --reporter node_modules/jshint-stylish/stylish.js public/js/app/",
     "livereload": "livereload public/dist/",
+    "clean": "rimraf public/js/jspm_packages public/dist/**/*",
     "dev": "parallelshell \"npm run livereload -s\" \"npm run watch:js -s\" \"npm run watch:css -s\""
   },
   "homepage": "https://github.com/twalker/es6-spa-seed",
@@ -38,6 +39,7 @@
     "livereload": "^0.3.6",
     "nib": "^1.1.0",
     "parallelshell": "^1.0.4",
+    "rimraf": "^2.2.8",
     "stylus": "^0.50.0",
     "watch": "^0.13.0"
   },
