--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "url": "https://github.com/twalker/es6-spa-seed/issues"
   },
   "devDependencies": {
-    "babel": "^4.3.0",
-    "jspm": "^0.14.0",
+    "babel": "^4.4.5",
     "jshint": "^2.6.0",
     "jshint-stylish": "^1.0.0",
+    "jspm": "^0.14.0",
     "livereload": "^0.3.6",
     "nib": "^1.1.0",
     "parallelshell": "^1.0.4",
@@ -44,12 +44,15 @@
     "watch": "^0.14.0"
   },
   "dependencies": {
-    "express": "^4.11.2"
+    "express": "^4.12.0"
   },
   "jspm": {
     "directories": {
       "baseURL": "public/js",
       "lib": "public/js/app"
+    },
+    "dependencies": {
+      "whatwg-fetch": "npm:whatwg-fetch@^0.7.0"
     }
   }
 }
